fixed responsiveness on small phones

--- a/SCSS/layout/_blog.scss
+++ b/SCSS/layout/_blog.scss
@@ -69,7 +69,7 @@
           }
         }
         p {
-          font-size: $default-font-size;
+          font-size: 1.4rem;
           text-align: left;
           margin-left: 1rem;
           margin-top: 1rem;
