--- a/css/index.css
+++ b/css/index.css
@@ -258,7 +258,7 @@ textarea {
   color: #ff8000;
 }
 .section-blog .all-blogs-container .blog-container .blog p {
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   text-align: left;
   margin-left: 1rem;
   margin-top: 1rem;
